# sqlite-mgr

./: CMakeLists.txt  README.md
sqlite-amalgam/: CMakeLists.txt
src/: CMakeLists.txt  main.c
